# site-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  .yamllint  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  STYLE_GUIDE.md  docker-compose.yml  docker.env  entrypoint.sh  env.example  manage.py  nginx.conf  passenger_wsgi.py  postgres.Dockerfile  pyproject.toml  readme.md  requirements.txt
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  IMPROVEMENTS.yml
.github/workflows/: CI.yml  build_and_push_docker_image.yml  does_build.yml  does_run.yml  lint.yml
.openshift/: database.yaml  secrets.enc.yaml  server.yaml
core/: base_admin.py  celery.py  managers.py  settings.py  urls.py  wsgi.py
event/: admin.py  models.py  serializers.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_gallery.py  0002_schedule_description_speaker_description.py  0003_event_image.py  0003_eventimage_delete_gallery.py  0004_alter_event_image.py  0004_eventimage_published.py  0005_schedule_image_speaker_image_alter_eventimage_image.py  0006_alter_event_image_alter_eventimage_image_and_more.py
faq/: admin.py  models.py  serializers.py  urls.py  views.py
faq/migrations/: 0001_initial.py
health/: urls.py  views.py
healthcheck/: middleware.py  urls.py  views.py
newsletter/: admin.py  models.py  serializers.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py  0002_auto.py  (+2 more)
openshift/: gnome-nepal.yaml  postgres.yaml  webserver.yaml  worker_beat.yaml
summernote/migrations/: 0001_initial.py
