[tool.poetry]
name = "djate"
version = "0.1.0"
description = ""
authors = ["n1rjal <nirjalpaudel54312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 88  # Adjust the line length if necessary
target-version = ['py311']  # Set your Python version, e.g. py37, py39, etc.
skip-string-normalization = false  # Use double quotes everywhere

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
